samples/_failures_safe/1761534162_ed7f4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57f09b00.c: In function ‘main’:
./samples/SAFE/__tmp_57f09b00.c:146:16: error: missing terminating " character
  146 |         printf("%.2
      |                ^~~~
./samples/SAFE/__tmp_57f09b00.c:146:9: error: expected expression at end of input
  146 |         printf("%.2
      |         ^~~~~~
./samples/SAFE/__tmp_57f09b00.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_57f09b00.c:146:9: error: expected declaration or statement at end of input
